# agent-workspace

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: classifier.py  composer.py  orchestrator.py  router.py
apps/api/app/api/routes/: chat.py  health.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/rag/: __init__.py
apps/api/app/schemas/: chat.py  document.py  tool.py
apps/api/app/services/: chat_service.py  llm_service.py
apps/api/app/tools/: base.py  calculator.py  document_lookup.py  web_fetch.py
apps/api/app/utils/: ids.py
apps/api/tests/: __init__.py  test_calculator_tool.py  test_classifier.py  test_llm_service.py
apps/web/: .env.example  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/documents/: page.tsx
apps/web/components/chat/: chat-shell.tsx
apps/web/hooks/: use-chat.ts
apps/web/lib/: chat.ts
apps/web/types/: chat.ts
